--- a/packages/client/src/app/pages/entradas/proveedores/proveedores-dialog/proveedores-dialog.component.html
+++ b/packages/client/src/app/pages/entradas/proveedores/proveedores-dialog/proveedores-dialog.component.html
@@ -4,7 +4,7 @@
   </app-dialog-title>
 
   <ng-template #defaultTitle>
-    <app-dialog-title>Registrar unidad de manejo</app-dialog-title>
+    <app-dialog-title>Registrar proveedor</app-dialog-title>
   </ng-template>
 
   <app-dialog-content>
