--- a/packages/client/src/app/pages/reportes/reportes.component.html
+++ b/packages/client/src/app/pages/reportes/reportes.component.html
@@ -1,5 +1,5 @@
 <div class="main-content-wrap">
-  <app-header headerTitle="Entradas"></app-header>
+  <app-header headerTitle="Reportes"></app-header>
 
   <div>
     <button appButtonOutline type="button" color="primary">
