--- a/packages/client/src/app/pages/saldos/saldos.component.html
+++ b/packages/client/src/app/pages/saldos/saldos.component.html
@@ -63,6 +63,7 @@
         [showFilter]="true"
         filterPlaceholder="Nombre"
         [showClearSelectionBtn]="true"
+        [defaultValue]="defaultMaterial"
         emptyValueLabel="Material"
         (valueChange)="onMaterialChange($event)"
       ></app-dropdown>
